adjusted to new version